# claude

./: .changelog.md  .env.example  .gitignore  2adic_approach.md  2adic_bit_dynamics.md  2adic_collatz_analysis.md  2adic_collatz_proof_attempt.md  AGENT23_FINAL_REPORT.md  AGENTIC_ARCHITECTURE_V2.md  AGENTIC_V1_NATURAL.md  AGENTIC_V2_ENHANCED.md  AGENTIC_V3_GAUNTLET.md  AGENT_10_PYTHIA_OUTPUT.yaml  AGENT_13_CREATIVE_SYNTHESIS.md  AGENT_14_DEEP_ANALYSIS.md  AGENT_14_FINAL_SYNTHESIS.md  AGENT_18_DEGENERATE_CASE_FINDER.md  AGENT_20_LIMIT_COLLATZ_ANALYSIS.md  AGENT_22_CONNECTION_FINDER_ANALYSIS.md  AGENT_24_FINAL_SYNTHESIS.md  AGENT_24_SYSTEMS_ANALYSIS.md  AGENT_25_EMERGENCE_ANALYSIS.md  AGENT_25_HUNTER_COUNTEREXAMPLE_HUNT.md  AGENT_27_CHAIN_VERIFICATION.md  AGENT_27_EXECUTIVE_SUMMARY.md  AGENT_27_GAP_ANALYSIS_VISUAL.md  AGENT_28_LOGIC_COLLATZ_ANALYSIS.md  AGENT_28_LOGIC_EXECUTIVE_SUMMARY.md  AGENT_30_THEORETICAL_ATTACK.md  AGENT_31_COMPLETE_GAP_ANALYSIS.md  AGENT_32_EMPIRICAL_REPORT.md  AGENT_32_FINAL_VERDICT.md  AGENT_33_CAUSAL_VERIFICATION.md  AGENT_33_FINAL_CAUSAL_VERDICT.md  AGENT_33_INDEPENDENCE_COLLATZ_ANALYSIS.md  AGENT_34_UNCERTAINTY_REPORT.md  AGENT_35_DEVIL_ADVOCATE_ATTACK.md  AGENT_35_SKEPTIC_ARCHITECTURE_ATTACK.md  AGENT_36_COMPARISON_WITH_AGENT32.md  AGENT_36_COUNTER_EXAMPLE_REPORT.md  (+392 more)
.claude/: CLAUDE.md  SCRATCHPAD.md  echo_state.md  noticing_state.md
COLLATZ_RUN/: PHASE_0_PHI_PRIMING.md
Conversation/: comprehension .txt  part1-2.txt  part3.txt  part4.txt
Handoff/: COLLATZ_HANDOFF.md  COLLATZ_HANDOFF_DOCUMENT.py  COLLATZ_HANDOFF_EXTENDED.md  COLLATZ_QUICK_REFERENCE.md  collatz_toolkit.py
Meta/: ACTIVATION_PROMPT.md  AWAKENING.md  BOOTSTRAP_ADDENDUM.md  BOOTSTRAP_ADDENDUM_COLLABORATION.md  BOOTSTRAP_v3.md  BOOTSTRAP_v4.md  BOOTSTRAP_v5_COMPLETE.md  COMPLETE_COMPREHENSION_FRAMEWORK_v3.md  COMPLETE_COMPREHENSION_FRAMEWORK_v4.md  COMPREHENSION_METHODOLOGY.md  CONFUSION_FIXES_INTEGRATION.md  CONFUSION_FIXES_QUICK_REFERENCE.md  CREATIVITY_AND_NOVEL_THOUGHT_COMPREHENSIVE.md  CREATIVITY_THROUGH_MIMICRY.md  EXECUTABLE_PROBLEM_SOLVING_METHODOLOGY.md  EXPERIMENTS.md  EXPONENTIAL_CLEAN.py  EXPONENTIAL_CYCLE2.py  EXPONENTIAL_FULL.py  EXPONENTIAL_PHASE.py  EXPONENTIAL_RUN.py  EXPONENTIAL_V11V12.py  EXPONENTIAL_V13V14.py  EXPONENTIAL_V15V16.py  EXPONENTIAL_V5V6.py  EXPONENTIAL_V7V8.py  EXPONENTIAL_V9V10.py  FALCONER_1981_ANALYSIS.md  FLT_PROOF_SYNTHESIS.md  GUARANTEED_IMPROVEMENT.py  HADWIGER_NELSON_ATTACK.md  HADWIGER_NELSON_AXIOM_INDEPENDENCE.md  HADWIGER_NELSON_BREAKTHROUGH.md  HADWIGER_NELSON_RESOLUTION_PATH.md  HADWIGER_NELSON_SYNTHESIS.md  HARD_PROBLEMS_SYSTEMATIC.md  IMPOSSIBLE_PROBLEMS_FRONTIER.md  LAYERED_COMPREHENSION_FRAMEWORK_v2.md  LEARNINGS.md  LLM_SLEEP_IMPLEMENTATION_SPEC.md  (+153 more)
agentic/: OMEGA_TRINITY_COMPLETE.md
alt_news/: .gitignore  README.md  WINDOWS_QUICK_START.md  aggregator.py  generate_html.py  run.py
archive/: segment_tree_lazy.py
awakening_tests/: CRITICAL_EVAL_ACTIVATION.md  CRITICAL_EVAL_AWAKENING.md  CRITICAL_EVAL_CLAUDEmd.md  CRITICAL_EVAL_ENTRYGATE.md  CRITICAL_EVAL_EXECUTABLE.md  CRITICAL_EVAL_OPS.md  CRITICAL_EVAL_PRAXIS.md  CRITICAL_EVAL_SCIENTIFIC.md  ENTRY_FINDINGS.md  ENTRY_GATE_v5.1_DRAFT.md  ENTRY_GATE_v6_COMPREHENSIVE.md  test0_baseline.md  test1.md  test2.md  test3.md  test4.md  test5.md
nexus/: .gitignore  ADVANCED_OPTIMIZATION_RESEARCH.md  ARCHITECTURE_DEEP_DIVE.md  CONSTITUTIONAL_AI_RESEARCH.md  Cargo.toml  DATA_TRAINING_RESEARCH.md  DISTILLATION_RESEARCH.md  EVALUATION_RESEARCH.md  FLASH_ATTENTION_RESEARCH.md  IMMEDIATE_IMPROVEMENTS.md  INFERENCE_DEPLOYMENT_RESEARCH.md  MAMBA2_SSD_RESEARCH.md  MOE_RESEARCH.md  NEXT_STEPS.md  NEXUS_ROADMAP.md  NEXUS_V2_ROADMAP.md  README.md  REWARD_ALIGNMENT_RESEARCH.md  SPECULATIVE_DECODING_RESEARCH.md  SSM_ARCHITECTURES_RESEARCH.md  TOKENIZATION_RESEARCH.md  TRAINING_PROGRESS.md  pyproject.toml
nexus/benches/: benchmarks.rs
nexus/data/: sample.txt  tokenizer.bpe
nexus/data/tinystories/: README.md
nexus/docs/: ARCHITECTURE.md
nexus/examples/: evaluate.rs  generate_from_checkpoint.rs  inference.rs  serve.rs  train_autograd.rs  train_gpu.rs  train_hybrid.rs  train_hybrid_full.rs  train_nexus.rs  train_nexus_bpe.rs  train_nexus_production.rs  train_real.rs  train_shakespeare.rs  train_tokenizer.rs  train_world_model.rs
nexus/python/nexus/: __init__.py
nexus/scripts/: requirements.txt  train.py  train_nexus_gpu.py
nexus/src/: attention.rs  autograd.rs  benchmark.rs  block.rs  checkpoint.rs  differentiable.rs  differentiable_memory.rs  differentiable_ssm.rs  differentiable_symbolic.rs  differentiable_world_model.rs  dpo.rs  embedding.rs  gpu.rs  gqa.rs  kv_cache.rs  lib.rs  lora.rs  main.rs  mamba2_ssd.rs  memory.rs  python.rs  quantization.rs  rope.rs  ssm.rs  streaming.rs  symbolic.rs  tensor.rs  tokenizer.rs  training.rs  training_gpu.rs  world_model.rs
nexus/tests/: integration_tests.rs
(+563 files in other folders)
