[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "Hybrid Intelligence Architecture: Attention + SSM + Test-Time Memory + Neuro-Symbolic"

[lib]
name = "nexus"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
